--- a/_data/department-of-corrections.yml
+++ b/_data/department-of-corrections.yml
@@ -19,7 +19,7 @@
   charts:
     - title: Inmate Accidents, Assaults and Escape Attempts
       summary: A series of metrics are used to examine the safety and security of the Atlanta City Detention Center. Inmate accidents (red), inmate-to-inmate assaults (gold), inmate-to-staff assaults (orange), and escape attempts (blue) are all shown as total number of incidents for the denoted month.
-      description: The City of Atlanta municipal Detention Center has not recorded a successful escape attempt since the start of the Reed administration.
+      description: Each category of accident and assault has stayed in the single digits since at least 2010. The City of Atlanta municipal Detention Center has not recorded a successful escape attempt since the start of the Reed administration.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DOC
@@ -35,7 +35,7 @@
   charts:
     - title: Community Partnerships and Inmate Detail Hours
       summary: The Atlanta City Detention Center organizes inmate details with a number of community organizations to help clear roads and neighborhoods of debris and, most recently, helping to clean overgrown lots on vacant and abandoned properties. The number of inmate hours used each month (red) represents a count of 1 hour for each inmate detail hour completed. More recently, the Department of Corrections began tracking the number of community organizationsworking in partnership with the City to complete detail hours. The number of partnerships each month is indicated in blue.
-      description: During the beginning of 2014, harsh weather kept inmate details to a minimum. With the change in seasons, a clear trend in increasing community partnerships and inmate hours has occurred, taking inmate hours to near record his in April 2014 (1516 hours).
+      description: During the beginning of 2014, harsh weather kept inmate details to a minimum. With the change in seasons, a clear trend in increasing community partnerships and inmate hours has occurred, though this could decrease in coming months due to seasonal fluctuations.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DOC
