--- a/_data/office-of-buildings.yml
+++ b/_data/office-of-buildings.yml
@@ -33,9 +33,9 @@
       series2-type: line
       series2-format: percentage
       series2-label: Resolved Within Target Timeframe
-    - title: Quality Control Review Efficiency
-      summary: In 2013, the Office introduced a new process at the front end of the permit application process that is designed to save both customers and staff time. This is referred to as Quality Control Review or QCR. Before an application is submitted, it is reviewed to make sure that all of the necessary paperwork is present and the application is complete. This gives the customer an early opportunity to gather additional documents before starting the formal application process. It makes the application review process smoother and ultimately quicker.
-      description: The results show that a disappointing decrease in the percentage of customers that have had their applications approved for submittal after the first QCR review – from 80-percent plus in mid-2013 to just-over 50 percent in April 2014. One interpretation of this result is that the Office needs to better communicate with its customers and the public about the information they need to provide when they are applying for a permit. The Office has noted this performance information and has re-vamped its website to set out more clearly what the information requirements are for different types of permits.
+    - title: Quality Control and Plan Review Efficiency
+      summary: Before a permit application is submitted, it goes through a Quality Control Review (QCR). During QCR, the application is reviewed to make sure that all of the necessary paperwork is present and the application is complete. This gives the customer an early opportunity to gather additional documents before starting the formal application process. The goal of QCR is to make the application review process smoother and ultimately quicker.  Once an application has been approved by QCR, it moves to a full plan review.  This chart measures how often an application makes it through each of these phases on the first try, which is a good measure of the Office's ability to accurately communication plan requirements to applicants.
+      description: The results show that a disappointing decrease in the percentage of customers that have had their applications approved for submittal after the first QCR review – from 80-percent plus in mid-2013 to just-over 50 percent in April 2014. Plan review approvals upon first review have consistenly stayed between 60-70%.  One interpretation of this result is that the Office needs to better communicate with its customers and the public about the information they need to provide when they are applying for a permit. The Office has noted this performance information and has re-vamped its website to set out more clearly what the information requirements are for different types of permits.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPCD
@@ -50,7 +50,7 @@
   charts:
     - title: Number of Building Permits Issued
       summary: One of the key functions of the Office of Buildings is to issue permits for residential, multifamily and commercial construction, alterations and demolition. This is an important barometer of economic development for the City. The figure shows the number of building permits issued each month. The figures are cumulative so they give a running count for each fiscal year.
-      description: The red line shows the monthly total for building permits issued. Despite some seasonal movement in the month-to-month date, there is a clear upward trend over time. Likewise the solid blue (year-to-date) lines indicate that more permits were issued in 2013 than in 2012, and that 2014 is on track to register a further increase over 2013. This is a good sign that the Atlanta economy is recovering after several years of recession.
+      description: The red line shows the monthly total for building permits issued. Despite some seasonal movement in the month-to-month date, there is a clear upward trend over time. Likewise the solid blue (year-to-date) lines indicate that more permits were issued in 2013 than in 2012. 2014 growth has slowed but has not decreased significantly. This is a good sign that the Atlanta economy is recovering after several years of recession.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPCD
@@ -67,7 +67,7 @@
 
     - title: Detailed Breakdown of Permit Types
       summary: The figure below gives a breakdown of the permitting data by different permit types. This is important to understand from the standpoint of city operations, since one new multifamily development has a bigger impact on watershed management, transport infrastructure and public safety services than a single new residential home, for example.
-      description: The figure shows that the share of multifamily permits has increased in the past couple years, while the contributions of commercial and residential construction demand have stayed fairly constant
+      description: The figure shows that the share of permits has stayed roughly consistent over the past few years, with multifamily permits seeing a slight increase in the past year.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPCD
