Revert "DPR chart updates"
This reverts commit 664c7d7b31da8a84b87b3305bb971d85a5369666.

--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -86,13 +86,13 @@
       series1-label: Completed on Schedule
 
 - group-title: Section III - Recreation Center Attendance and Programming
-  group-description: The Office of Recreation currently manages an array of facilities which include thirty-three recreation centers, indoor and outdoor pools, spray grounds, tennis courts, basketball courts, ball fields, playgrounds, and tennis centers. The charts below show information on total attendance, memberships and youth participation data at these Centers. Please note that the numbers below reflect only the X Centers that are managed/operated by the Department.  The Department has X Centers that are managed through a third party via an MOU agreement.
+  group-description:
   charts:
     - title: Recreation Center Attendance
-      summary: The chart below shows total visits to Recreation Centers that have been logged through the Department's iParks application.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.  Active memberships, also seasonal, has ranged from 3,200-5,300.
+      summary: The Office of Recreation currently manages an array of facilities which include thirty-three recreation centers, indoor and outdoor pools, spray grounds, tennis courts, basketball courts, ball fields, playgrounds, and tennis centers. The charts below shows total recreation center visits and active recreation center memberships. Please note that the numbers below reflect only the X Centers that are managed/operated by the Department.  The Department has X Centers that are managed through a third party via an MOU agreement.
+      description: Since the Department started reliably tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.  Active memberships, also seasonal, has ranged from 3,200-5,300.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
-      size: half
+      size: full
       department: DPR
       datasource: rec_center_attendance
       series-grouping: true
@@ -100,19 +100,6 @@
       series1-type: column
       series1-format: number
       series1-label: Total people
-	  
-    - title: Recreation Center Memberships
-      summary: The chart below shows the total number of active memberships at the Department's Recreation Centers.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.  Active memberships, also seasonal, has ranged from 3,200-5,300.
-      note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
-      size: half
-      department: DPR
-      datasource: rec_center_memberships
-      series-grouping: true
-      series1-metric: Result
-      series1-type: column
-      series1-format: number
-      series1-label: Total memberships
 
     - title: Youth Attendance and Programming
       summary: The department offers an array of diverse programs for youth that will improve academic and athletic performance while building character and sharpening social skills. The chart below shows the total youth being served by After School and Camp Best Friends (blue) and other Recreation Center (red) Programming such as swim lessons, sports and tots programs. Please note that the numbers below reflect only the X Centers that are managed/operated by the Department.  The Department has X Centers that are managed through a third party via an MOU agreement.
